--- a/SuperHero Project/SuperHero Project.csproj
+++ b/SuperHero Project/SuperHero Project.csproj
@@ -12,4 +12,8 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
 </Project>
